# app-version-incrementer

./: .pre-commit-config.yaml  AGENTS.md  README.md  package.json  pyproject.toml  requirements.txt
src/: increment_app_version.py
tests/: test_increment_version.py
