[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app-version-incrementer"
version = "1.0.0"
description = "Automatically increment app version numbers for iOS and Android projects."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "cshade" },
]
dependencies = [
  "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.8.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
increment-app-version = "increment_app_version:main"

[tool.setuptools]
py-modules = ["increment_app_version"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
